--- a/fish_index.html
+++ b/fish_index.html
@@ -111,7 +111,7 @@
             
             <section data-scene="barriers">
                 <h3>Fish Barriers</h3>
-				<p>Fish passage barriers are structures that do or may alter fish movement, migration and habitats. Barriers may be completely blocked or fully passable. Natural barriers include falls, cascades and fords. Manmade barriers include culverts, dams, bridges, weirs, and tide gates. Almost 40,000 barriers have been identified by the Oregon Department of Fish and Wildlife (ODFW), over half of which are culverts. The Fish Habitat Distribution Development Project is still in progress, and there are still many unknowns regarding barrier passability.</p>
+				<p>Fish passage barriers are structures that may alter fish movement, migration and habitats. Barriers may be completely blocked or fully passable. Natural barriers include falls, cascades and fords. Manmade barriers include culverts, dams, bridges, weirs, and tide gates. Almost 40,000 barriers have been identified by the Oregon Department of Fish and Wildlife (ODFW), over half of which are culverts. Some barriers are fully passable by fish, while others are completely impassible.</p>
 				<br/><br/>
 				<div class="leg"><p style ="font-weight: bold;">Barrier Type</p>
 				<br/><i style="background: #00b093; opacity: 0.8; margin-right: 8px;"></i><p>Natural</p><br/><i style="background: #ff7575; opacity: 0.8; margin-right: 8px;"></i><p>Manmade</p><br/>
@@ -139,7 +139,7 @@
 			
 			<section data-scene="redband">
                 <h3>Redband Trout</h3>
-				<p>Redband Trout are a subspecies of Rainbow Trout that are adapted to the arid regions east of the Cascades. They are indigenous to Central Oregon, and historically lived anywhere connected to the Deschutes River. Today, their habitat has been limited due to impassible dams, flow alterations, non-native species, and chemical treatment. Redband Trout spawn in the Spring.</p>
+				<p>Redband Trout are a subspecies of Rainbow Trout that are adapted to the arid regions of eastern Oregon. They are indigenous to Central Oregon, and historically lived anywhere connected to the Deschutes River. Today, their habitat has been somewhat limited due to impassible dams, flow alterations, non-native species, and chemical treatments. Redband Trout spawn in the Spring.</p>
 				<br/><br/>
 				<div class="leg"><p style ="font-weight: bold;">Habitat Extent</p>
 				<img src="img/redband.jpg" height="98" width="220" style="float: right;"><br/><i style="background: #00b093; opacity: 0.8; margin-right: 8px;"></i><p>Current</p><br/><i style="background: #ff3333; opacity: 0.8; margin-right: 8px;"></i><p>Historical</p><br/>
@@ -149,7 +149,7 @@
 			
 			<section data-scene="bulltrout">
                 <h3>Bull Trout</h3>
-				<p>Found in clear, cold waters, the Bull Trout is considered one of the most beautiful and mysterious native Oregon Fish. Due to their specific habitat requirements, Bull Trout are considered excellent indicators of water quality. Bull Trout typically grow up to 18 inches long, and their diet depends heavily on fish. Bull Trout spawn in the Fall.</p>
+				<p>Found in clear, cold waters, the Bull Trout is considered one of the most beautiful and mysterious native Oregon fish. Due to their specific habitat requirements, Bull Trout are considered excellent indicators of water quality. Bull Trout typically grow up to 18 inches long, and their diet depends heavily on other fish. Bull Trout spawn in the Fall.</p>
 				<br/><br/>
 				<div class="leg"><p style ="font-weight: bold;">Habitat Extent</p>
 				<img src="img/bulltrout.jpg" height="100" width="220" style="float: right;"><br/><i style="background: #00b093; opacity: 0.8; margin-right: 8px;"></i><p>Current</p><br/><i style="background: #ff3333; opacity: 0.8; margin-right: 8px;"></i><p>Historical</p><br/>
@@ -159,7 +159,7 @@
 			
 			<section data-scene="chinook">
                 <h3>Chinook Salmon</h3>
-				<p>The largest of the Pacific Salmon, Chinook have been known to weigh up to 100 pounds, although most weight under 50. Chinook spawn in the Fall throughout Oregon. However, given the distance their spawning grounds, some Chinook enter freshwater in the Spring, comprising the Spring run. Fall run Chinook spawn in easily-accesible coastal streams.</p>
+				<p>The largest of the Pacific Salmon, Chinook have been known to weigh up to 100 pounds, although most weigh under 50. Chinook spawn in the Fall. Some Chinook enter freshwater in the Spring, comprising the Spring run, as they must travel long distances to reach their spawning grounds. Fall-run Chinook spawn in easily-accesible coastal streams.</p>
 				<br/><br/> 
 				<p style="font-size:14px; font-weight:bold;">Saltwater</p><p style="font-size:14px; font-weight:bold; display:inline; margin-left:120px;">Spawning</p>
 				<br/>
@@ -177,7 +177,7 @@
 			
 			<section data-scene="coho">
                 <h3>Coho Salmon</h3>
-				<p>Coho salmon are some of the most popular sport fish in Oregon waters. They spawn in coastal streams and tributaries, and can even be found in urban streams. When Coho are ready to spawn, they gather in groups at the mouths of major rivers. They wait for water to rise, such during a rainstorm, and then advance upstream.</p>
+				<p>Coho are some of the most popular salmon for sport fishing in Oregon. They spawn in coastal streams and tributaries, and can even be found in urban streams. When Coho are ready to spawn, they gather in groups at the mouths of major rivers. They wait for the water to rise, such as during a rainstorm, and then advance upstream.</p>
 				<br/><br/>
 				<div class="leg">
 				<p style="font-size:14px; font-weight:bold; margin-left:185px; line-height:10px;">Saltwater</p><br/>				
@@ -192,7 +192,7 @@
 			
 			<section data-scene="chum">
                 <h3>Chum&nbspSalmon</h3>
-				<p>Chum are considerably smaller than their Coho relatives, and as a result, don't travel far upstream to spawn. In Oregon, Chum are limited to a few coastal streams, where they are known to gather in large numbers in spawning season. Juvenile Chum spend only a few days in the parent stream before returning to the sea.</p>
+				<p>Chum are considerably smaller than their Coho relatives, and as a result, do not travel far upstream to spawn. In Oregon, Chum are limited to a few coastal streams, where they are known to gather in large numbers during spawning season. Juvenile Chum spend only a few days in their parent stream before returning to the sea.</p>
 				<br/><br/>
 				<div class="leg">
 				<p style="font-size:14px; font-weight:bold; margin-left:170px; line-height:10px;">Saltwater</p><br/>				
@@ -207,7 +207,7 @@
 			
 			<section data-scene="sockeye">
                 <h3>Sockeye Salmon</h3>
-				<p>Sockeye are known as the most flavorful Pacific Salmon, and are recognizable due to bright spawning coloration in males. Unlike other salmon species, Sockeye require a lake to spawn. Thus, their spawning streams must be connected to lakes. In Oregon, many Sockeye runs no longer exist, primarily due to damming. Sockeye are plentiful in Washington and British Columbia.</p>
+				<p>Sockeye are known as the most flavorful Pacific Salmon, and are recognizable due to bright spawning coloration in males. Unlike other salmon species, Sockeye spawning streams must be connected to lakes. In Oregon, many Sockeye runs no longer exist, primarily due to damming. Sockeye are plentiful in Washington and British Columbia.</p>
 				<br/><br/>
 				<div class="leg">
 				<p style="font-size:14px; font-weight:bold; margin-left:170px; line-height:10px;">Saltwater</p><br/>				
@@ -222,7 +222,7 @@
 			
 			<section data-scene="lamprey">
                 <h3>Lamprey</h3>
-				<p>Lampreys are long eel-like fish. They typically spend 3-7 years in freshwater before migrating to the ocean, where they remain for several years. Lamprey return to freshwater to spawn and die. Lamprey are an important food food for indigenous groups throughout the Northwest. The construction of the Columbia River Hydroelectric System severely limited their distribution throughout Oregon waters.</p>
+				<p>Lampreys are long eel-like fish. They typically spend 3-7 years in freshwater before migrating to the ocean, where they remain for several years. Lamprey return to freshwater to spawn and die. Lamprey are an important food for indigenous groups throughout the Northwest. The construction of the dams has severely limited their distribution throughout Oregon waters.</p>
 				<br/><br/><div class="leg"><p style ="font-weight: bold;">Habitat Extent</p>
 				<img src="img/lamprey.jpg" height="110" width="220" style="float: right;"><br/><i style="background: #00b093; opacity: 0.8; margin-right: 8px;"></i><p>Current</p><br/><i style="background: #ff3333; opacity: 0.8; margin-right: 8px;"></i><p>Historical</p><br/>
 				</div>
@@ -232,7 +232,7 @@
 						
 			<section data-scene="sturgeon">
                 <h3>Sturgeon</h3>
-				<p>White Sturgeon are one of the largest freshwater fish in the world, able to reach 20 feet in length, and over 1000 pounds in weight. White Sturgeon spend much of their lives on the bottom of slow-moving waters, including estuaries. They spawn many times throughout their long lives, moving to clean, fast moving rapids to lay eggs. The construction of dams along the Columbia has created landlocked populations of White Sturgeon.</p>
+				<p>White Sturgeon are one of the largest freshwater fish in the world, able to reach 20 feet in length and over 1000 pounds in weight. White Sturgeon spend much of their lives on the bottom of slow-moving waters, including estuaries. They spawn many times throughout their long lives, moving to clean, fast moving rapids to lay their eggs. The construction of dams along the Columbia has created landlocked populations of White Sturgeon.</p>
 				<p>Less is known about the Green Sturgeon, which can be found spawning in coastal rivers. Unlike White Sturgeon, Green Sturgeon spend most of their lives in the ocean.</p>
 				<br/><br/><div class="leg">
 				<p style="font-size:14px; font-weight:bold; margin-left:130px;">White Sturgeon</p><br/>
@@ -551,6 +551,7 @@
 				/*if (scene == 'portland'){
 				miniMap;
 				}*/
+				map.setMaxBounds(map.getBounds());
 
             return map;
         }
