--- a/groundwater_index.html
+++ b/groundwater_index.html
@@ -620,6 +620,7 @@ function otherStyle(feature) {
 				/*if (scene == 'portland'){
 				miniMap;
 				}*/
+				map.setMaxBounds(map.getBounds());
 
             return map;
         }
