--- a/umatilla_index.html
+++ b/umatilla_index.html
@@ -569,6 +569,7 @@
 				/*if (scene == 'portland'){
 				miniMap;
 				}*/
+				map.setMaxBounds(map.getBounds());
 
             return map;
         }
