--- a/drinking_index.html
+++ b/drinking_index.html
@@ -101,15 +101,15 @@
             
             <section data-scene="ground">
                 <h3>Groundwater Sources</h3>
-                <p>35% of Oregonians rely on groundwater for drinking: typically either small public water systems or private wells. Groundwater recharge areas require different protection strategies than surface watersheds.</p>
+                <p>35% of Oregonians rely on groundwater for drinking – typically from either small public water systems or private wells. Groundwater recharge areas require different protection strategies than surface watersheds.</p>
           	    <p>In the Willamette Valley, groundwater is often used as an emergency water source. It is typically utilized when contaminants are found in surface water areas, or when reservoirs are low.</p>
             	<br/>
-            	<div class="leg"><i style="background: #0066ff; fillOpacity: .8; color:#b3d1ff; weight: 1; opacity: 0.8; border:1px solid #b3d1ff"></i><b><p style="text-align: left; margin-left: 25px">Groundwater Source Protection Zone</b></p></div>
+            	<div class="leg"><i style="background: #0066ff; fillOpacity: .8; color:#0066ff; weight: 1; opacity: 0.8; border:1px solid #b3d1ff"></i><b><p style="text-align: left; margin-left: 25px">Groundwater Source Protection Zone</b></p></div>
             </section>
             
             <section data-scene="bottled">
                 <h3>Bottled Water</h3>
-                <p>In addition to municipally provided drinking water, over 20 companies utilize Oregon's water for bottling. These range from multi-national corporations, such as Coca Local, to local businesses.</p>
+                <p>In addition to municipally provided drinking water, over 20 companies utilize Oregon's water for bottling. These range from multi-national corporations, such as Coca-Cola, to local businesses.</p>
             	<p>A bottling facility proposed by Nestle in Cascade Locks has sparked debate between the economic benefit and ecological cost of bottling water.</p>
            		 <br/>
            		 <div class="leg"><img src="img/bottle.png" style="height:30px; width:12px;"><p style = "padding-top:8px; margin-left: 20px;">Bottling Facility</p></div>
@@ -119,7 +119,7 @@
                 <h3>Drinking Water Protection</h3>
                 <p>The Oregon Department of Environmental Quality (DEQ), in combination with the Oregon Health Authority (OHA), assesses potential contaminants in drinking water source zones. Assessments allow local communities to address and prevent drinking water pollution. While areas with high populations are prone to large numbers of potential contaminants, rural agricultural areas can also have a variety of contaminant sources.</p>
             	<br/>
-            	<div class="leg"><p style="font-weight:bold">Number of Contaminants</p><img src="img/total.png" style="height:40px; width:40px; margin-left:10px;"><img src="img/total.png" style="height:32px; width:32px; margin-left:35px; margin-top:7px;"><img src="img/total.png" style="height:24px; width:24px; margin-left:45px; margin-top:14px;"><img src="img/total.png" style="height:16px; width:16px; margin-left:40px; margin-top:21px;"><img src="img/total.png" style="height:10px; width:10px; margin-left:40px; margin-top:26px;"><br><br><br><p>&nbsp>1000&nbsp&nbsp 500-1000&nbsp 100-500&nbsp 50-100&nbsp <50</p><br><i style="background: #0066ff; fillOpacity: .8; color:#b3d1ff; weight: 1; opacity: 0.8; border:1px solid #b3d1ff"></i><b><p style="text-align: left;  margin-left: 25px">Groundwater Zones</b></p><i style="background: #b3d1ff; fillOpacity: .8; color:#4d94ff; weight: 1; opacity: 0.8; border:1px solid #4d94ff"></i><b><p style="text-align: left;  margin-left: 25px">Surface Water Zones</b></p>
+            	<div class="leg"><p style="font-weight:bold">Number of Contaminants</p><img src="img/total.png" style="height:40px; width:40px; margin-left:10px;"><img src="img/total.png" style="height:32px; width:32px; margin-left:35px; margin-top:7px;"><img src="img/total.png" style="height:24px; width:24px; margin-left:45px; margin-top:14px;"><img src="img/total.png" style="height:16px; width:16px; margin-left:40px; margin-top:21px;"><img src="img/total.png" style="height:10px; width:10px; margin-left:40px; margin-top:26px;"><br><br><br><p>&nbsp>1000&nbsp&nbsp 500-1000&nbsp 100-500&nbsp 50-100&nbsp <50</p><br><i style="background: #0066ff; fillOpacity: .8; color:#0066ff; weight: 1; opacity: 0.8; border:1px solid #0066ff"></i><b><p style="text-align: left;  margin-left: 25px">Groundwater Zones</b></p><i style="background: #b3d1ff; fillOpacity: .8; color:#4d94ff; weight: 1; opacity: 0.8; border:1px solid #4d94ff"></i><b><p style="text-align: left;  margin-left: 25px">Surface Water Zones</b></p>
             	<br/><p>Hover over map for details</p>
             	</div>
             </section>    
@@ -400,6 +400,7 @@
 				/*if (scene == 'portland'){
 				miniMap;
 				}*/
+				map.setMaxBounds(map.getBounds());
 
             return map;
         }
