--- a/fish_index.html
+++ b/fish_index.html
@@ -282,6 +282,7 @@
                     <h2 class="modal-title">About</h2>
                 </div>
                 <div class="modal-body">
+                    <p2>Basemap labels by CARTO</p><br/>
                     <p2>Cover photo retrieved from Wikimedia Commons</p2><br>                    
                     <p2>End photo retrieved from Wikimedia Commons</p2><br>
                     <p2>Some illustrations by Timothy Knepp, U.S Fish and Wildlife Services, others retrieved from Wikimedia Commons</p2><br/>
@@ -292,7 +293,7 @@
                 	<p2>Fish information: Oregon ODFW</p2>
                 </div>
                 <div class="modal-footer">
-                    <p2>Created with Leaflet</p>
+                    <p2>Created with Leaflet and storymap.js</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
