--- a/flood_index.html
+++ b/flood_index.html
@@ -195,6 +195,7 @@
                     <h2 class="modal-title" style="color:black;">About</h2>
                 </div>
                 <div class="modal-body">
+                    <p2>Basemap by CARTO</p><br/>
                     <p2 style="font-size:20px">Geographic Data</p2><br>
                     <p2>1861, 1964, 1996 Flood Extent: <a href = "http://spatialdata.oregonexplorer.info/geoportal/catalog/search/resource/details.page?uuid=%7B12E0DFA1-5503-495A-9B4C-F01BF36CF717%7D" target="_blank">FEMA/Oregon Spatial Data Library</a></p2><br>
                     <p2>Flood Insurance Zones: <a href = "http://spatialdata.oregonexplorer.info/geoportal/catalog/search/resource/details.page?uuid=%7BF2CC36DE-1F0A-42D2-9B8D-FDD71721A7D3%7D" target="_blank">FEMA/Oregon Spatial Data Library</a></p2><br>
@@ -209,7 +210,7 @@
                 	<p2>Flood Insurance and Demographics: FEMA, Oregon Risk MAP</p2><br>
                 </div>
                 <div class="modal-footer">
-                    <p2>Created with Leaflet</p>
+                    <p2>Created with Leaflet and storymap.js</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
