--- a/groundwater_index.html
+++ b/groundwater_index.html
@@ -137,13 +137,13 @@
                 <h3>Irrigation and Aquifers</h3>
 				<p>Almost 90% of Oregon's groundwater extraction is used for irrigation. Each point on the map represents a claimed irrigation water right, and is colored based on the underlying aquifer type.</p>
             	<p>With so much reliance on specific aquifers, especially in the drought-prone regions of Eastern Oregon, groundwater sustainability becomes paramount.</p> 
-            	<div class="leg"><p style ="font-weight: bold;">Claimed Groundwater Irrigation<br/> Water Rights</p><br/><p>Aquifer Type</p><i style="background: #ccccb3; opacity: 0.8"></i><p>Sand & Gravel</p><i style="background: #8cd98c; opacity: 0.8"></i><p>Volcanic</p><i style="background: #4d79ff; opacity: 0.8"></i><p>Other</p></div>
+            	<div class="leg"><p style ="font-weight: bold;">Groundwater Irrigation Rights</p><p>Aquifer Type</p><i style="background: #ccccb3; opacity: 0.8"></i><p>Sand & Gravel</p><i style="background: #8cd98c; opacity: 0.8"></i><p>Volcanic</p><i style="background: #4d79ff; opacity: 0.8"></i><p>Other</p></div>
     		</section>
     		
     		<section  data-scene="county_use">
                 <h3>County Groundwater Use</h3>
            	    <p>The USGS National Water Use Information Program compiles water use data by county every five years. Water use data is categorized by both its purpose (irrigation, domestic, mining, etc.) and its type (surface or ground, fresh or saline). Data are collected in terms of millions of gallons extracted per day.</p>
-            	<div class="leg"><p style ="font-weight: bold;">2010 Total Groundwater <br/> Use in Mgal/day</p><i style="background: #f8000c; opacity: 0.8"></i><p>300+</p><i style="background: #ff6343; opacity: 0.8"></i><p>200 - 300</p><i style="background: #ffa458; opacity: 0.8"></i><p>100 - 200</p><i style="background: #ffd58d; opacity: 0.8"></i><p>25 - 100</p><i style="background: #feffcd; opacity: 0.8"></i><p>0 - 25</p>
+            	<div class="leg"><p style ="font-weight: bold;">2010 Total Groundwater <br/> Use in Mgal/day</p><br/><br/><i style="background: #f8000c; opacity: 0.8"></i><p>300+</p><i style="background: #ff6343; opacity: 0.8"></i><p>200 - 300</p><i style="background: #ffa458; opacity: 0.8"></i><p>100 - 200</p><i style="background: #ffd58d; opacity: 0.8"></i><p>25 - 100</p><i style="background: #feffcd; opacity: 0.8"></i><p>0 - 25</p>
             	<p>Hover over counties for details</p></div>
             </section>      
              
@@ -194,6 +194,7 @@
                 <div class="modal-body">
                     <p2>Cover Photo by Angel Schatz - Retrieved from Flickr</p2><br>
                     <p2>End Photo by Another Believer - Retrieved from Wikimedia Commons</p2><br>
+                    <p2>Basemap by CARTO</p><br/>
                     <p2 style="font-size:20px">Geographic Data</p2><br>
                     <p2>Groundwater Recharge: <a href = "https://catalog.data.gov/dataset/a-digital-hydrologic-network-supporting-nawqa-mrb-sparrow-modeling-mrb-e2rf1ws" target="_blank">MRB-SPARROW Model</a> and <a href = "https://catalog.data.gov/dataset/attributes-for-mrb-e2rf1-catchments-by-major-river-basins-in-the-conterminous-united-state-20024c1a4" target="_blank">Recharge Attributes</a></p2><br>
                 	<p2>Aquifers: <a href = "https://water.usgs.gov/GIS/metadata/usgswrd/XML/aquifers_us.xml#stdorder" target="_blank">USGS</a></p2><br>
@@ -208,7 +209,7 @@
                 	<p2>The Oregonian</p2>
                 </div>
                 <div class="modal-footer">
-                    <p2>Created with Leaflet</p>
+                    <p2>Created with Leaflet and storymap.js</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
