--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
                     <p class="modal-title" style="font-size:30px;">About</p>
                 </div>
                 <div class="modal-body">
-                    <p>The Oregon Water Atlas was created for the Institute for Water and Watersheds at Oregon State University, and by Gareth Baldrica-Franklin.</p>
+                    <p>The Oregon Water Atlas is an aggregation and visualization of Oregon’s water data. It was created as a response to the wide array of publicly available data scatted across the Internet. The Oregon Water Atlas was created using entirely open-source software and coding libraries, including QGIS, Leaflet, storymap.js, and Bootstrap.</p>
+                	<p>The Oregon Water Atlas is funded by the Oregon Institute for Water and Watersheds through the USGS 104(b) initiative.</p>
                 </div>
                 <div class="modal-footer">
-                    <p>Created with Leaflet</p>
+                    <p>Created by Gareth Baldrica-Franklin</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -214,8 +215,9 @@
             <div class="row">
                 <div class="col-lg-12">
                 	<p>Gareth Baldrica-Franklin, Institute for Water and Watersheds, Oregon State University, 2017</p>
-                	<a href="http://geoviz.ceoas.oregonstate.edu/index.html#" target="_blank"><img src="img/geoviz_osu.png" style="max-width:15%;" ></a>
             		<a href="http://water.oregonstate.edu/" target="_blank"><img src="img/IWW-logo.png" style="max-width:20%;" ></a>
+            		<a href="http://geoviz.ceoas.oregonstate.edu/index.html#" target="_blank"><img src="img/geoviz_osu.png" style="max-width:15%;" ></a>
+            		<a href="https://water.usgs.gov/wrri/index.php" target="_blank"><img src="img/USGS_logo.png" style="max-width:10%;" ></a>
                 </div>
             </div>
             <!-- /.row -->
