--- a/infrastructure_index.html
+++ b/infrastructure_index.html
@@ -207,6 +207,7 @@
                 </div>
                 <div class="modal-body">
                     <p2>Cover Photo by Walter Siegmund - retrieved from Wikimedia Commons</p2><br>
+                    <p2>Basemap by Esri, labels by CARTO</p><br/>
                     <p2 style="font-size:20px">Geographic Data</p2><br>
                     <p2>Dams/Storage/Risk/Height: <a href = "http://spatialdata.oregonexplorer.info/geoportal/details;id=523fed781b444e278e86fd0c63fd7c53" target="_blank">Oregon Spatial Data Library</a></p2><br>
                 	<p2>Dam Dates: <a href = "http://nid.usace.army.mil/cm_apex/f?p=838:12" target="_blank">National Inventory of Dams</a></p2><br>
@@ -221,7 +222,7 @@
                 	<p2>Bonneville Power Administration</p2><br/>
                 </div>
                 <div class="modal-footer">
-                    <p2>Created with Leaflet</p>
+                    <p2>Created with Leaflet and storymap.js</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
