--- a/precipitation.html
+++ b/precipitation.html
@@ -209,11 +209,12 @@
                     <h2 class="modal-title" style="color:black;">About</h2>
                 </div>
                 <div class="modal-body">
+                    <p2>Basemap by CARTO</p><br/>
                     <p2 style="font-size:20px">Geographic Data</p2><br>
 					<p2>30-year Normal Precipitation Data: <a href = "http://www.prism.oregonstate.edu/" target="_blank">PRISM Climate Group, Oregon State University</a></p2><br>
                 </div>
                 <div class="modal-footer">
-                    <p2>Created with Leaflet</p>
+                    <p2>Created with Leaflet and storymap.js</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
