--- a/water_use_index.html
+++ b/water_use_index.html
@@ -122,7 +122,7 @@
 			<section data-scene="counties">
                 <h3>Total Water Use</h3>
                 <p>On the average day, massive amounts of water are used throughout Oregon. Counties with the highest levels of water use per day are typically areas where widespread irrigation is necessary. The daily average does not reflect how water use changes season-to-season, which is especially true in heavily irrigated areas. Data are collected in millions of gallons per day.</p>
-				<div class="leg"><p style ="font-weight: bold;">2010 Total Water<br/> Use in Mgal/day</p><i style="background: #f8000c; opacity: 0.8"></i><p>500+</p><i style="background: #ff6343; opacity: 0.8"></i><p>300 - 500</p><i style="background: #ffa458; opacity: 0.8"></i><p>200 - 300</p><i style="background: #ffd58d; opacity: 0.8"></i><p>100 - 200</p><i style="background: #feffcd; opacity: 0.8"></i><p>0 - 100</p>
+				<div class="leg"><p style ="font-weight: bold;">2010 Total Water Use<br/>in Mgal/day</p><br/><br/><i style="background: #f8000c; opacity: 0.8"></i><p>500+</p><i style="background: #ff6343; opacity: 0.8"></i><p>300 - 500</p><i style="background: #ffa458; opacity: 0.8"></i><p>200 - 300</p><i style="background: #ffd58d; opacity: 0.8"></i><p>100 - 200</p><i style="background: #feffcd; opacity: 0.8"></i><p>0 - 100</p>
 				<br/><p>Hover over counties for details</p>
 				</div>
 			</section>
@@ -253,6 +253,7 @@
                     <h2 class="modal-title" style="color:black">About</h2>
                 </div>
                 <div class="modal-body">
+                    <p2>Basemap by CARTO</p><br/>
                     <p2>Cover photo by Sam Beebe/Ecotrust - retrieved from Wikimedia Commons</p2><br>                    
                     <p2>End photo retrieved from Wikimedia Commons</p2><br>
                     <p2 style="font-size:20px">Geographic Data</p2><br>
@@ -262,7 +263,7 @@
                 	<p2>Water Rights Categories: Oregon Department of Water Resources</p2>
                 </div>
                 <div class="modal-footer">
-                    <p2>Created with Leaflet</p>
+                    <p2>Created with Leaflet and storymap.js</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
