--- a/surface_index.html
+++ b/surface_index.html
@@ -214,7 +214,7 @@
                 	<p2>Oregon Department of Environmental Quality</p2><br/>
                 </div>
                 <div class="modal-footer">
-                    <p2>Created with Leaflet</p>
+                    <p2>Created with Leaflet and storymap.js</p>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
