--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="modal-body">
                     <p>The Oregon Water Atlas is an aggregation and visualization of Oregon’s water data. It was created as a response to the wide array of publicly available data scatted across the Internet. The Oregon Water Atlas was created using entirely open-source software and coding libraries, including QGIS, Leaflet, storymap.js, and Bootstrap.</p>
-                	<p>The Oregon Water Atlas is funded by the Oregon Institute for Water and Watersheds through the USGS 104(b) initiative.</p>
+                	<p>The Oregon Water Atlas is funded by the Oregon Institute for Water and Watersheds through the USGS 104(b) initiative. It was created for an undergraduate honors thesis at Oregon State University. The accompanying research paper can be found <a href="http://hdl.handle.net/1957/61174">here</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <p>Created by Gareth Baldrica-Franklin</p>
@@ -179,9 +179,12 @@
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
                 <div class="col-sm-6 portfolio-item"> 
-                <a  href="" target="_blank">
-                    <img class="img-responsive" src="img/conflict_home.png" alt="">
-                </a>
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    					<img class="img-responsive" src="img/conflict_home.png" alt="">
+  				</button>
+  				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    					<a class="dropdown-item" target="_blank" href="http://oregonwater.info/umatilla_index.html">Umatilla</a><br/>
+  					</div>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                 <h4>
