--- a/drinking_index.html
+++ b/drinking_index.html
@@ -258,7 +258,7 @@
     				fillOpacity: 1,
     				opacity: 1
     				}
-    					).bindTooltip(feature.properties.PCS_NAME, {className: 'label_tooltip'});
+    					).bindTooltip(feature.properties.PWS_NAME, {className: 'label_tooltip'});
     				}
 				}), legend_contaminants],
 			'bottle': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:bottled_water&maxFeatures=100&outputFormat=application%2Fjson', {
