--- a/groundwater_index.html
+++ b/groundwater_index.html
@@ -166,7 +166,7 @@
             </section>
    
             <section data-scene="end">
-				 	<div class= "end-background-color-img background-color-fullscreen-setting text-responsive"><br>
+				 	<div class= "end-background-img background-fullscreen-setting text-responsive"><br>
             </section>
         	<i class="animated zoomIn infinite glyphicon glyphicon-arrow-up arrow-up"></i>
         	<i class="animated zoomIn infinite glyphicon glyphicon-arrow-down arrow-down"></i>
