--- a/infrastructure_index.html
+++ b/infrastructure_index.html
@@ -539,6 +539,7 @@ function bridgeColor(string){
         			minZoom: 6,
         			maxZoom: 15,
         			transparent: true,
+        			opacity:0.2
     			}).addTo(map);
     			
     			oregonWater.setOpacity(0.5);
